# pinc

./: CMakeLists.txt  mainWindow.h  motorTest.cpp  pinc.cpp  pinc.h  pinc.sublime-project  pinc.sublime-workspace  pincLaser2D.cpp  pincLaser2D.h  pincMainWindow.cpp  pincMainWindow.h  pincProcessor.cpp  pincProcessor.h  pinc_test.cpp  testplay.cpp
c/: CMakeLists.txt  c_pinc.c  c_pinc.h  host_common.h  host_main.c  host_main.h  host_spi.h  host_stepper.c  host_stepper.h  lcd_test.c  request.h  stepper_common.h
c/algorithm/: bst.c  bst.h
c/io/: CMakeLists.txt  fpga.c  fpga_signal.h  gyro.c  pcf8574.h  pin_request.h  request.h  signal.h
c/lcd/: ascii_char_bit_maps.h  lcd.h  st7735.c  st7735.h
c/spi/: host_spi.h  spi_client.h  spi_common.h
c/stepper/: CMakeLists.txt  host_stepper.c  host_stepper.h  pi_stepper.c  pi_stepper.h  stepper_common.h  stepper_test.c
common/: motor_common.h  spi_common.h
device/: CMakeLists.txt  device.cpp  device.h  deviceGroup.cpp  deviceGroup.h  espStepperGroup.cpp  espStepperGroup.h  espStepperMotor.cpp  espStepperMotor.h  laser.cpp  laser.h  spiDevice.cpp  spiDevice.h
esp/: CMakeLists.txt  esp_common.h  sdkconfig  sdkconfig.old
esp/components/axis/: CMakeLists.txt  axis.cpp  axis.h
esp/components/spi/: CMakeLists.txt  spi.cpp  spi.h
esp/main/: CMakeLists.txt  main.cpp
fpga/pinc-fpga.srcs/constrs_1/new/: pinc-fpga-pins.xdc
fpga/pinc-fpga.srcs/sources_1/new/: data_register.v  debounce.v  edge_detect.v  main.v  shift_register.v  signal.v  signal_interrupt.v  spi.v  status_register.v
gcode/: CMakeLists.txt  gBlock.cpp  gBlock.h  gProgram.cpp  gProgram.h  pincMove.cpp  pincMove.h
gui/: CMakeLists.txt  gui_test.cpp  pincButton.cpp  pincButton.h  pincButtonGroup.cpp  pincButtonGroup.h  pincCentralWindow.cpp  pincCentralWindow.h  pincColors.h  pincControlModeButtons.cpp  pincControlModeButtons.h  pincEditWindow.cpp  pincEditWindow.h  pincJogControl.cpp  pincJogControl.h  pincLabel.cpp  pincLabel.h  pincMainWindow.cpp  pincMainWindow.h  pincPanel.cpp  pincPanel.h  pincPosition.cpp  pincPosition.h  pincStepperControl.cpp  pincStepperControl.h  pincStepperMove.cpp  pincStepperMove.h  pincStyle.cpp  pincStyle.h  pinc_buttonGroup.h  pinc_gui.cpp  pinc_gui.h
panel/: CMakeLists.txt  controlPanel.cpp  controlPanel.h  laserPanel.cpp  laserPanel.h  loadMenu.cpp  loadMenu.h  positionReadout.cpp  positionReadout.h  stepperConfig.h
pico/src/: CMakeLists.txt  pinc.c  pinc.h  stepper.c  stepper.h
pico/src/oled/: CMakeLists.txt  oled.c  oled.h
pico/src/spi/: CMakeLists.txt  spi.pio  spi_client.c  spi_client.h
spi/: CMakeLists.txt  spi.h  spiHost.cpp  spiHost.h  spiMsg.cpp  spiMsg.h
